# test_hask_app

./: CHANGELOG.md  README.md  test-hask-app.cabal
